# mini-code-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
mini_code_cli/: __init__.py  agent_loop.py  prompts.py  tools.py  utils.py
src/: agent_loop.py  prompts.py  tools.py  utils.py
