[project]
name = "mini-code-cli"
version = "0.0.1"
description = "Minimal Coding CLI"
readme = "README.md"
requires-python = ">=3.10"
# dependencies = [
#     "kernels>=0.11.7",
#     "matplotlib>=3.10.8",
#     "numpy>=2.2.6",
#     "pandas>=2.3.3",
#     "pyarrow>=21.0.0",
#     "requests>=2.32.0",
#     "rustbpe>=0.1.0",
#     "tiktoken>=0.11.0",
#     "torch==2.9.1",
# ]
authors = [
    {name = "Nikolai Rozanov", email = "nikolai.rozanov@gmail.com"},
]
license = {file = "LICENSE"}
urls = {"Homepage" = "https://github.com/ai-nikolai/mini-code-cli"}


[project.scripts]
mini-code-cli = "agent_loop:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

