[project]
name = "mini-code-cli"
version = "0.0.6"
description = "Minimal Coding CLI"
readme = "README.md"
requires-python = ">=3.10"
# dependencies = [
# ]
authors = [
    {name = "Nikolai Rozanov", email = "nikolai.rozanov@gmail.com"},
]
license = {file = "LICENSE"}
urls = {"Homepage" = "https://github.com/ai-nikolai/mini-code-cli"}


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mini_code_cli"]

[project.scripts]
mini-code = "mini_code_cli.agent_loop:main"

